@@ -10,7 +10,7 @@ import org.junit.runners.ParameterizedWithName;
 import org.junit.runners.ParameterizedWithName.ParametersToString;
 import statechum.DeterministicDirectedSparseGraph.VertID.VertKind;
 import statechum.DeterministicDirectedSparseGraph.VertexID;
-import statechum.Helper;
+import statechum.TestHelper;
 import statechum.collections.*;
 
 import java.util.*;
@@ -561,60 +561,60 @@ public class TestMapWithSearch
 	@SuppressWarnings("ConstantConditions")
 	private <K,V> void checkUnsupportedOperationsOnEntrySet(final Map<K,V> map)
 	{
-		statechum.Helper.checkForCorrectException(() -> map.entrySet().iterator().remove(),
+		statechum.TestHelper.checkForCorrectException(() -> map.entrySet().iterator().remove(),
 				UnsupportedOperationException.class,"modification of iterator");
 
-		statechum.Helper.checkForCorrectException(() -> map.entrySet().add(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.entrySet().add(null),
 				UnsupportedOperationException.class,"modification of entry set");
 
-		statechum.Helper.checkForCorrectException(() -> map.entrySet().addAll(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.entrySet().addAll(null),
 				UnsupportedOperationException.class,"modification of entry set");
 
-		statechum.Helper.checkForCorrectException(() -> map.entrySet().remove(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.entrySet().remove(null),
 				UnsupportedOperationException.class,"modification of entry set");
 		
-		statechum.Helper.checkForCorrectException(() -> map.entrySet().removeAll(map.entrySet()),
+		statechum.TestHelper.checkForCorrectException(() -> map.entrySet().removeAll(map.entrySet()),
 				UnsupportedOperationException.class,"modification of entry set");
 		
-		statechum.Helper.checkForCorrectException(() -> map.entrySet().retainAll(map.entrySet()),
+		statechum.TestHelper.checkForCorrectException(() -> map.entrySet().retainAll(map.entrySet()),
 				UnsupportedOperationException.class,"modification of entry set");
 		
-		statechum.Helper.checkForCorrectException(() -> map.entrySet().clear(),
+		statechum.TestHelper.checkForCorrectException(() -> map.entrySet().clear(),
 				UnsupportedOperationException.class,"modification of entry set");
 	}
 	
 	@SuppressWarnings("ConstantConditions")
 	private <K,V> void checkUnsupportedOperationsOnValueSet(final Map<K,V> map)
 	{
-		statechum.Helper.checkForCorrectException(() -> map.values().iterator().remove(),
+		statechum.TestHelper.checkForCorrectException(() -> map.values().iterator().remove(),
 				UnsupportedOperationException.class,"modification of iterator");
 		
-		statechum.Helper.checkForCorrectException(() -> map.values().add(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.values().add(null),
 				UnsupportedOperationException.class,"modification of value set");
 
-		statechum.Helper.checkForCorrectException(() -> map.values().addAll(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.values().addAll(null),
 				UnsupportedOperationException.class,"modification of value set");
 
-		statechum.Helper.checkForCorrectException(() -> map.values().remove(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.values().remove(null),
 				UnsupportedOperationException.class,"modification of value set");
 		
-		statechum.Helper.checkForCorrectException(() -> map.values().removeAll(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.values().removeAll(null),
 				UnsupportedOperationException.class,"modification of value set");
 		
-		statechum.Helper.checkForCorrectException(() -> map.values().retainAll(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.values().retainAll(null),
 				UnsupportedOperationException.class,"modification of value set");
 		
-		statechum.Helper.checkForCorrectException(() -> map.values().clear(),
+		statechum.TestHelper.checkForCorrectException(() -> map.values().clear(),
 				UnsupportedOperationException.class,"modification of value set");
 	}
 	
 	@SuppressWarnings("ConstantConditions")
 	private <K,V> void checkUnsupportedOperationsOnKeySet(final Map<K,V> map)
 	{
-		statechum.Helper.checkForCorrectException(() -> map.keySet().add(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.keySet().add(null),
 				UnsupportedOperationException.class,"modification of key set");
 		
-		statechum.Helper.checkForCorrectException(() -> map.keySet().addAll(null),
+		statechum.TestHelper.checkForCorrectException(() -> map.keySet().addAll(null),
 				UnsupportedOperationException.class,"modification of key set");
 	}
 	
@@ -1087,7 +1087,7 @@ public class TestMapWithSearch
 		
 		checkArrayWithNoPairs(map);
 
-		Assert.assertFalse(map.keySet().removeAll(List.of()));
+		Assert.assertFalse(map.keySet().removeAll(Collections.emptyList()));
 		checkArrayWithNoPairs(map);
 	}
 		
@@ -1312,7 +1312,7 @@ public class TestMapWithSearch
 		Assert.assertTrue(map.keySet().containsAll(createMapOne(keyOne,valueOne).keySet()));// contains all on an empty set returns true
 		Assert.assertFalse(map.keySet().containsAll(Arrays.asList(keyOne,keyTwo)));
 		Assert.assertTrue(map.keySet().containsAll(Arrays.asList(keyOne,keyOne)));
-		Assert.assertTrue(map.keySet().containsAll(List.of()));
+		Assert.assertTrue(map.keySet().containsAll(Collections.emptyList()));
 				
 		Iterator<CInteger> iter = map.keySet().iterator();
 		Assert.assertTrue(iter.hasNext());
@@ -1342,7 +1342,7 @@ public class TestMapWithSearch
 	public void testSizeOne_KeySetRemoveAll1()
 	{
 		final Attempt<CInteger,Long> map = createMapOne(keyOne,valueOne);
-		Assert.assertFalse(map.keySet().removeAll(List.of()));
+		Assert.assertFalse(map.keySet().removeAll(Collections.emptyList()));
 		checkArrayWithOnePair(map, keyOne, valueOne);
 	}
 	
@@ -1374,7 +1374,7 @@ public class TestMapWithSearch
 	public void testSizeOne_KeySetRetainAll2()
 	{
 		final Attempt<CInteger,Long> map = createMapOne(keyOne,valueOne);
-		Assert.assertTrue(map.keySet().retainAll(List.of(new CInteger(9))));
+		Assert.assertTrue(map.keySet().retainAll(Collections.singletonList(new CInteger(9))));
 		checkArrayWithNoPairs(map);
 	}
 	
@@ -1382,7 +1382,7 @@ public class TestMapWithSearch
 	public void testSizeOne_KeySetRetainAll3()
 	{
 		final Attempt<CInteger,Long> map = createMapOne(keyOne,valueOne);
-		Assert.assertTrue(map.keySet().retainAll(List.of()));
+		Assert.assertTrue(map.keySet().retainAll(Collections.emptyList()));
 		checkArrayWithNoPairs(map);
 	}
 	
@@ -1414,7 +1414,7 @@ public class TestMapWithSearch
 	public void testSizeOne_KeySetContainsAll3()
 	{
 		final Attempt<CInteger,Long> map = createMapOne(keyOne,valueOne);
-		Assert.assertTrue(map.keySet().containsAll(List.of()));
+		Assert.assertTrue(map.keySet().containsAll(Collections.emptyList()));
 		checkArrayWithOnePair(map, keyOne, valueOne);
 	}
 	
@@ -1432,7 +1432,7 @@ public class TestMapWithSearch
 	{
 		final Attempt<CInteger,Long> map = createMapOne(keyOne,valueOne);
 		
-		statechum.Helper.checkForCorrectException(() -> map.getOurs().keySet().iterator().remove(),IllegalStateException.class,"next was not yet called");
+		statechum.TestHelper.checkForCorrectException(() -> map.getOurs().keySet().iterator().remove(),IllegalStateException.class,"next was not yet called");
 	}
 	
 	@Test
@@ -1450,7 +1450,7 @@ public class TestMapWithSearch
 		final Attempt<CInteger,Long> map = createMapOne(keyOne,valueOne);
 		final Iterator<CInteger> iter = map.keySet().iterator();
 		iter.next();iter.remove();	
-		statechum.Helper.checkForCorrectException(
+		statechum.TestHelper.checkForCorrectException(
 				() -> map.getOurs().keySet().iterator().remove(),
 				IllegalStateException.class,"next was not yet called");
 	}
@@ -1459,7 +1459,7 @@ public class TestMapWithSearch
 	public void testNull1()
 	{
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
-		statechum.Helper.checkForCorrectException(
+		statechum.TestHelper.checkForCorrectException(
 				() -> map.getOurs().put(null, 33L),
 				IllegalArgumentException.class,"key cannot be null");
 	}
@@ -1469,10 +1469,10 @@ public class TestMapWithSearch
 	public void testNull2()
 	{
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
-		statechum.Helper.checkForCorrectException(
+		statechum.TestHelper.checkForCorrectException(
 				() -> map.getOurs().put(keyOne, null),
 				IllegalArgumentException.class,"value cannot be null");
-		statechum.Helper.checkForCorrectException(
+		statechum.TestHelper.checkForCorrectException(
 				() -> map.getOurs().putAll(null),
 				NullPointerException.class,null);
 	}
@@ -1802,7 +1802,7 @@ public class TestMapWithSearch
 	{
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
 		//noinspection SuspiciousMethodCalls
-		Assert.assertFalse(map.keySet().removeAll(List.of()));
+		Assert.assertFalse(map.keySet().removeAll(Collections.emptyList()));
 		checkArrayWithTwoPairs(map,keyOne,valueOne, keyTwo, valueTwo);
 	}
 	
@@ -1842,7 +1842,7 @@ public class TestMapWithSearch
 	public void testSizeTwo_KeySetRetainAll2()
 	{
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
-		Assert.assertTrue(map.keySet().retainAll(List.of(new CInteger(9))));
+		Assert.assertTrue(map.keySet().retainAll(Collections.singletonList(new CInteger(9))));
 		checkArrayWithNoPairs(map);
 	}
 	
@@ -1851,7 +1851,7 @@ public class TestMapWithSearch
 	{
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
 		//noinspection SuspiciousMethodCalls
-		Assert.assertTrue(map.keySet().retainAll(List.of()));
+		Assert.assertTrue(map.keySet().retainAll(Collections.emptyList()));
 		checkArrayWithNoPairs(map);
 	}
 	
@@ -1900,7 +1900,7 @@ public class TestMapWithSearch
 	{
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
 		//noinspection SuspiciousMethodCalls
-		Assert.assertTrue(map.keySet().containsAll(List.of()));
+		Assert.assertTrue(map.keySet().containsAll(Collections.emptyList()));
 		checkArrayWithTwoPairs(map,keyOne,valueOne, keyTwo, valueTwo);
 	}
 	
@@ -1918,7 +1918,7 @@ public class TestMapWithSearch
 	{
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
 		
-		statechum.Helper.checkForCorrectException(() -> map.getOurs().keySet().iterator().remove(),IllegalStateException.class,"next was not yet called");
+		statechum.TestHelper.checkForCorrectException(() -> map.getOurs().keySet().iterator().remove(),IllegalStateException.class,"next was not yet called");
 	}
 	
 	@Test
@@ -1938,7 +1938,7 @@ public class TestMapWithSearch
 		final Attempt<CInteger,Long> map = createMapTwo(keyOne,valueOne, keyTwo, valueTwo);
 		final Iterator<CInteger> iter = map.keySet().iterator();
 		iter.next();iter.remove();	
-		statechum.Helper.checkForCorrectException(() -> map.getOurs().keySet().iterator().remove(),IllegalStateException.class,"next was not yet called");
+		statechum.TestHelper.checkForCorrectException(() -> map.getOurs().keySet().iterator().remove(),IllegalStateException.class,"next was not yet called");
 	}
 	
 	
@@ -2260,7 +2260,7 @@ public class TestMapWithSearch
 	@Test
 	public void testInvalidModification2()
 	{
-		Helper.checkForCorrectException(
+		TestHelper.checkForCorrectException(
 				() -> createOurMap().values().remove(45),
 				UnsupportedOperationException.class, "modification");
 	}
@@ -2269,7 +2269,7 @@ public class TestMapWithSearch
 	public void testInvalidModification3b()
 	{
 
-		Helper.checkForCorrectException(
+		TestHelper.checkForCorrectException(
 				() -> createOurMap().values().clear(),
 				UnsupportedOperationException.class, "modification");
 	}
@@ -2278,7 +2278,7 @@ public class TestMapWithSearch
 	public void testInvalidModification4()
 	{
 
-		Helper.checkForCorrectException(
+		TestHelper.checkForCorrectException(
 				() -> createOurMap().entrySet().clear(),
 				UnsupportedOperationException.class, "modification");
 	}
